# jaxmg

./: .gitignore  CMakeLists.txt  WHEEL_BUILD.md  pyproject.toml  sitemap.xml
.github/workflows/: build-wheels.yml
api/cyclic_1d/: index.html
api/potri/: index.html
api/potrs/: index.html
api/syevd/: index.html
examples/block_cyclic_data_layout/: index.html
