[build-system]
requires = [
    "scikit-build-core>=0.10.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "jaxmg"
version = "0.1.0"
description = "Python wrapper around cuSolverMg with JAX support"
authors = [{ name = "Roeland Wiersema" }]
dependencies = ["pytest==8.2.1", "matplotlib>=3.10.3"]
requires-python = ">=3.11"

[project.optional-dependencies]

cuda = ["jax[cuda12]>=0.6.2"]
docs = [
    "jax>=0.6.2",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.23",
    "mkdocstrings==0.30.1",
    "mkdocs-exclude==1.0.2",
    "mkdocs-ipynb==0.1.1",
    "hippogriffe==0.2.2",
]

[tool.scikit-build]
cmake.version = ">=3.16"
cmake.build-type = "Release"
wheel.packages = ["src/jaxmg"]
build-dir = "build/{wheel_tag}"
sdist.include = [
    "CMakeLists.txt",
    "FindCUDNN.cmake",
    "src/cuda/**",
    "src/jaxmg/**",
    "README.md",
    "LICENSE",
]
sdist.exclude = [
    "src/jaxmg/bin/*.so",
]

[tool.cibuildwheel]
# Only build for Linux x86_64 (no macOS, Windows, or other architectures)
build = ["cp311-manylinux_x86_64", "cp312-manylinux_x86_64", "cp313-manylinux_x86_64", "cp314-manylinux_x86_64"]

# Use manylinux_2_28 for GCC 11 support
manylinux-x86_64-image = "manylinux_2_28"

# Skip tests during wheel build (requires GPU)
test-skip = "*"
